Fix z-index of wizard on loading screen

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -523,25 +523,32 @@ body {
             transform: translate(-50%, -50%);
             width: 100%;
             height: 100%;
-            background-color: rgba(94, 126, 126);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            z-index: 100000; /* Ensuring the loading bar is on top */
         }
 
         #progress-bar {
             width: 30%;
             margin-top: 0.5%;
             height: 2%;
-
         }
 
         label {
             color: white;
             font-size: 2rem;
         }
-
+.loading-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(94, 126, 126);
+    z-index: 10;
+}
 
 
 
@@ -563,6 +570,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 11;
 }
 
 /** Wizard CSS & Animations */
